added paragraph into index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Hello GIT!</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ex nisi nulla provident voluptatem voluptatibus, maiores blanditiis doloribus sint, minus beatae dolor omnis fuga enim consectetur suscipit voluptatum et eum!
+    </p>
 </body>
 </html>
